k8s/shipping/Namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: shipping
  labels:
    pod-security.kubernetes.io/enforce: baseline
