k8s/shipping/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-app
  namespace: shipping
spec:
  replicas: 2 # updated 2 for HA
  selector:
    matchLabels:
      app: shipping-app
  template:
    metadata:
      labels:
        app: shipping-app
      annotations:
        description: "Deployment for the smart-health application"
    spec:
      containers:
        - name: shipping-app-container
          image: errorhunter/shipping-managment-system:90acf2613fa807e93d2748d1262f691bf47434f4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop: ["ALL"]
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  revisionHistoryLimit: 3
