k8s/shipping/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
  namespace: shipping
spec:
  type: ClusterIP
  selector:
    app: shipping-app
  ports:
    - protocol: TCP
      port: 80  
      targetPort: 8000
