k8s/shipping/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domain-local-shipping-ingress
  namespace: shipping
  annotations:
    cert-manager.io/issuer: "self-signed-issuer"
spec:
  tls:
  - hosts:
    - shipping.local
    secretName: domain-local-shipping-cert-tls
  rules:
  - host: shipping.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shipping-service
            port:
              number: 80
